<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">parcial-1-am-acn4av-telesca</string>
    <string name="nombre_polideportivo">Polideportivo Municipal</string>
    <string name="descripcion">Nuestro polideportivo cuenta con múltiples instalaciones para el disfrute de nuestros socios. Aquí podrán reservarse estas instalaciones para una mejor organización y experiencia</string>
    <string name="descripcion_logo">Logo del polideportivo</string>
    <string name="descripcion_imagen_gimnasio">Imagen representativa de un gimnasio</string>
    <string name="descripcion_imagen_cumpleanios">Imágen de confeti representando un festejo de cumpleaños</string>
    <string name="descripcion_imagen_parrilla">Imagen de una parrilla</string>
    <string name="descripcion_imagen_tenis">imágen de una raqueta y una pelota de tenis</string>
    <string name="descripcion_imagen_basket">Imagen de una pelota de basket</string>
    <string name="descripcion_imagen_futbol">Imágen de una pelota de futbol</string>
    <string name="reservar_cancha_tenis">Reservar Cancha Tenis</string>
    <string name="reservar_cancha_basket">Reservar Cancha Basket</string>
    <string name="reservar_cancha_futbol">Reservar Cancha Futbol</string>
    <string name="reservar_parrilla">Reservar Parrilla</string>
    <string name="reservar_cumpleanios">Reservar Cumpleaños</string>
    <string name="reservar_turno_gimnasio">Reservar Turno Gimnasio</string>
    <string name="mensaje_proximamente">Estamos trabajando en agregar esa funcionalidad. Vuelve pronto!</string>
    <string name="sin_turno_parrilla" tools:ignore="Typos">Por el momento no se requiere reserva para el uso de las parrillas</string>
    <string name="sin_turno_gimnasio" tools:ignore="Typos">Por el momento no se requiere reserva para el uso del gimnasio</string>
    <string name="descripcion_icono_warning">Icono de warning</string>
    <string name="Click_para_registrarte">¿No tienes cuenta? Haz click aquí para registrarte</string>
    <string name="contrasenia">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="descripcion_icono_mi_cuenta">Icono de silueta que representa la sección de Mi Cuenta</string>
    <string name="descripcion_foto_de_perfil">Foto de perfil</string>
    <string name="sin_reservas">No posee ninguna reserva por el momento.</string>
    <string name="placeholder_nombre">Mariano Telesca</string>
    <string name="boton_volver">Volver</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="asteriscos">*******</string>
    <string name="titulo_reservas_perfil">Reservas previas y actuales:</string>
    <string name="placeholder_fecha_nacimiento">Fecha de nacimiento: 28/04/1998</string>
    <string name="placeholder_mail">Correo electrónico: mariano.telesca@davinci.edu.ar</string>
    <string name="placeholder_numero_socio">Número de socio: 000001</string>
    <string name="titulo_registro">Registro de usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="confirmar_contrasenia">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
</resources>