<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".RegistroActivity">

    <Button
        android:id="@+id/boton_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_volver"
        android:textColor="@android:color/white"
        android:background="@color/dark_green"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titulo_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_registro"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/boton_volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint="@string/nombre"
        android:inputType="text"
        android:textSize="16sp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/titulo_registro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/apellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint="@string/apellido"
        android:inputType="text"
        android:textSize="16sp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/fecha_nacimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint="@string/fecha_de_nacimiento"
        android:inputType="date"
        android:textSize="16sp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/apellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/fecha_nacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/contrasenia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint="@string/confirmar_contrasenia"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/contrasenia_confirmar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint="@string/contrasenia"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/contrasenia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/boton_registrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textColor="@android:color/white"
        android:background="@color/dark_green"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/contrasenia_confirmar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
